--- a/build.gradle
+++ b/build.gradle
@@ -284,7 +284,7 @@ task discordupload {
                         "```")
             }
 
-            builder.addBinaryBody("file", file(jar.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, jar.archiveName)
+            builder.addBinaryBody("file", file(jar.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, jar.getArchivesBaseName())
 
             HttpEntity multipart = builder.build()
 
