--- a/build.gradle
+++ b/build.gradle
@@ -194,6 +194,7 @@ mixin {
 jar {
     finalizedBy 'reobfJar'
     archiveClassifier = 'universal'
+    archiveBaseName = "${archivesBaseName}${project.mc_version}"
     manifest {
         attributes([
                 "Specification-Title": project.modid,
@@ -205,7 +206,6 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
         ])
     }
-    setArchivesBaseName "${archivesBaseName}${project.mc_version}"
 }
 
 // Example configuration to allow publishing using the maven-publish task
@@ -222,7 +222,7 @@ task srcJar(type: Jar) {
     build.dependsOn it
     from sourceSets.main.allSource
     archiveClassifier = 'sources'
-    setArchivesBaseName "${archivesBaseName}${project.mc_version}"
+    archiveBaseName = "${archivesBaseName}${project.mc_version}"
     from file("LICENSE")
 }
 
@@ -230,7 +230,7 @@ task deobfJar(type: Jar) {
     build.dependsOn it
     from sourceSets.main.output
     archiveClassifier = 'deobf'
-    setArchivesBaseName "${archivesBaseName}${project.mc_version}"
+    archiveBaseName = "${archivesBaseName}${project.mc_version}"
     from file("LICENSE")
 }
 
@@ -283,7 +283,9 @@ task discordupload {
                         "```")
             }
 
-            builder.addBinaryBody("file", file(jar.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, jar.archiveBaseName.get())
+            var name = jar.archiveBaseName.get() + "-" + jar.archiveVersion.get() + ".jar"
+
+            builder.addBinaryBody("file", file(jar.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, name)
 
             HttpEntity multipart = builder.build()
 
