--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,6 +37,15 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+      - name: Load secrets
+        uses: 1password/load-secrets-action@v2
+        with:
+          export-env: true
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          DISCORD_WEBHOOK: "${{ secrets.OP_ADVANCED_PORTALS_VAULT_ITEM }}/discord_webhook"
+          CURSE_API: "${{ secrets.OP_ADVANCED_PORTALS_VAULT_ITEM }}/curse"
+          MODRINTH_TOKEN: "${{ secrets.OP_ADVANCED_PORTALS_VAULT_ITEM }}/modrinth"
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -48,9 +57,6 @@ jobs:
         run: ./gradlew runData
       - name: Build and publish (release)
         env:
-          CURSE_API: ${{ secrets.CURSE_API }}
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
           IS_RELEASE: true
         run: |
           # Build
