--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,11 +12,18 @@ jobs:
       upload_url: ${{ steps.release.outputs.upload_url }}
     # https://github.com/google-github-actions/release-please-action in case more config is needed
     steps:
+      - name: Load secrets
+        uses: 1password/load-secrets-action@v2
+        with:
+          export-env: true
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          PAT: "${{ secrets.OP_RESKIN_VAULT_ITEM }}/pat"
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
           command: manifest
-          token: ${{ secrets.PAT }}
+          token: ${{ env.PAT }}
           # See how to configure file https://github.com/googleapis/release-please/blob/main/docs/manifest-releaser.md
       # See output info at https://github.com/google-github-actions/release-please-action#configuration for variables
 
@@ -37,6 +44,15 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+      - name: Load secrets
+        uses: 1password/load-secrets-action@v2
+        with:
+          export-env: true
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          DISCORD_WEBHOOK: "${{ secrets.OP_RESKIN_VAULT_ITEM }}/discord_webhook"
+          CURSE_API: "${{ secrets.OP_RESKIN_VAULT_ITEM }}/curse"
+          MODRINTH_TOKEN: "${{ secrets.OP_RESKIN_VAULT_ITEM }}/modrinth"
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -48,9 +64,6 @@ jobs:
         run: ./gradlew runData
       - name: Build and publish (release)
         env:
-          CURSE_API: ${{ secrets.CURSE_API }}
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
           IS_RELEASE: true
         run: |
           # Build
