--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -1,29 +1,32 @@
+name: Build
+
 on:
   push:
     branches-ignore:
       - master
   workflow_dispatch:
-name: Build
+
 jobs:
   snapshot:
-    #if: ${{!startsWith(github.ref.split(’/’)[2], 'release-please')}}
     runs-on: ubuntu-latest
-    # https://github.com/google-github-actions/release-please-action in case more config is needed
+
     steps:
-      - uses: actions/checkout@v3
-        # these if statements ensure that a publication only occurs when
-        # a new release is created:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: 17
+
       - name: Load secrets
         uses: 1password/load-secrets-action@v2
         with:
@@ -31,8 +34,16 @@ jobs:
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
           DISCORD_WEBHOOK: "${{ secrets.OP_RESKIN_VAULT_ITEM }}/discord_webhook"
+
+      - name: Debug Environment
+        run: |
+          echo "Java Version:"
+          java -version
+          echo "Environment Variables:"
+          printenv
+
       - name: Build and upload preview (run for non-release builds)
         if: ${{ github.ref }}
         run: |
-          # Build
-          ./gradlew build discordupload
+          ./gradlew build --info
+          ./gradlew discordupload --info
