--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -22,9 +22,9 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: 'oracle'
           java-version: 17
 
       - name: Load secrets
