--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,13 @@ import org.apache.http.impl.client.HttpClients
 
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = "https://repo.spongepowered.org/maven" }
+        //maven { url = 'https://sizableshrimp.me/maven' }
         maven { url = "https://plugins.gradle.org/m2/" }
         maven { url = "https://maven.parchmentmc.org" }
         mavenCentral()
     }
     dependencies {
-        classpath(group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.+', changing: true)
         classpath "org.spongepowered:mixingradle:0.7+"
         classpath "org.apache.httpcomponents:httpmime:4.5.14"
         classpath "org.parchmentmc:librarian:1.+"
@@ -24,9 +23,9 @@ buildscript {
 plugins {
     id "com.modrinth.minotaur" version "2.+"
     id "com.matthewprenger.cursegradle" version "1.4.0"
+    id 'net.neoforged.gradle' version '[6.0.13, 6.2)'
 }
 
-apply plugin: 'net.minecraftforge.gradle'
 apply plugin: "java"
 apply plugin: 'eclipse'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
@@ -74,7 +73,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.20'
+    mappings channel: 'official', version: '1.20.1'
     //mappings channel: 'parchment', version: '2021.12.19-1.18.1'
     //mappings channel: 'parchment', version: '2021.07.21-1.17'
 
@@ -154,15 +153,18 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.20-46.0.14'
+    minecraft 'net.neoforged:forge:1.20.1-47.1.62'
 
     implementation 'org.spongepowered:mixin:0.8.5'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    implementation fg.deobf("com.sekwah:SekCLib:1.0.0")
+    implementation fg.deobf("com.sekwah:sekclib-forge:[1.0.0,2)")
     // Trick intellij to allow for better editing in here for the discord task
     // compile "org.apache.httpcomponents:httpmime:4.5.13"
     //implementation fg.deobf("curse.maven:torohealth-damage-indicators-245733:3556931")
+//    implementation fg.deobf("curse.maven:jei-238222:3592081")
+//    implementation fg.deobf("curse.maven:configured-457570:3559398")
+//    implementation fg.deobf("curse.maven:jade-324717:3614180")
 
     //implementation fg.deobf("curse.maven:hwyla:${project.hwyla_fileid}")
 
@@ -203,6 +205,7 @@ jar {
                 "Implementation-Version": "${versionString}",
                 "Implementation-Vendor" :project.vendor,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs": "mixins.${project.modid}.json"
         ])
     }
 }
@@ -215,12 +218,6 @@ def reobfFile = file("$buildDir/reobfJar/output.jar")
 def reobfArtifact = artifacts.add('default', reobfFile) {
     type 'jar'
     builtBy 'reobfJar'
-}
-
-processResources {
-    filesMatching('META-INF/mods.toml') {
-        expand('file': [jarVersion: project.version])
-    }
 }
 
 task srcJar(type: Jar) {
