--- a/build.gradle
+++ b/build.gradle
@@ -220,6 +220,12 @@ def reobfArtifact = artifacts.add('default', reobfFile) {
     builtBy 'reobfJar'
 }
 
+processResources {
+    filesMatching('META-INF/mods.toml') {
+        expand('file': [jarVersion: project.version])
+    }
+}
+
 task srcJar(type: Jar) {
     build.dependsOn it
     from sourceSets.main.allSource
